# python-boilerplate

./: .gitignore  README.md  config.example.yml  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  python-app.yml
tests/: test_config.py
